# Toy-Assembly

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  Toy_Assembly  cmake_install.cmake
include/: control_op.h  input.h  logic_op.h  math_op.h  mem_op.h  output.h
src/: control_op.c  input.c  logic_op.c  main.c  math_op.c  mem_op.c  output.c
